@@ -277,6 +277,7 @@ be:<br>
 <li><b>shell_report_script</b> - a script generating text reports</li>
 <li><b>shell_script</b> - that is, a command script</li>
 <li><b>multimedia</b> - media players or games</li>
+<li><b>nonstandard</b> - a custom type of software not covered by other models</li>
 <li><b>etl</b> - extract, transform, load.  that is, data conversion</li>
 <li><b>monitor</b> - a service that monitors activity</li>
 <li><b>driver</b> - a device driver</li>
