@@ -50,7 +50,7 @@ justified,    right   justified,   or   center justified   within      its   col
               @( see_also, "http://rosettacode.org/wiki/Align_columns" );
 <b>pragma</b> license( unrestricted );
 
-<b>pragma</b> software_model( shell_report_script );
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> aligncols <b>is</b>
