@@ -24,10 +24,12 @@ $ spar aplusb
        @( description, "contestants can gain familiarity with online judging system being used. " )
        @( description, "A+B is one of few problems on contests, which traditionally lacks fabula." )
        @( description, "Given 2 integer numbers, A and B. One needs to find their sum. " )
-       @( description, "A Rosetta Code Example" )
-       @( author, "Ken O. Burtch" );
+       @( category, "tutorials" )
+       @( author, "Ken O. Burtch" )
+       @( see_also, "http://rosettacode.org/wiki/A%2BB" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> aplusb <b>is</b>
@@ -44,5 +46,4 @@ $ spar aplusb
 
 <FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
 <FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
-
 </PRE></BODY></HTML>
