@@ -40,10 +40,12 @@ cC3
        @( description, "" )
        @( description, "If possible, also describe what happens when the arrays" )
        @( description, "are of different lengths. " )
-       @( see_also, "http://rosettacode.org/wiki/Loop_over_multiple_arrays_simultaneously" )
-       @( author, "Ken O. Burtch" );
+       @( category, "tutorials" )
+       @( author, "Ken O. Burtch" )
+       @( see_also, "http://rosettacode.org/wiki/Loop_over_multiple_arrays_simultaneously" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> arrayloop <b>is</b>
@@ -61,4 +63,5 @@ cC3
 
 <FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
 <FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
+
 </PRE></BODY></HTML>
