@@ -34,10 +34,12 @@ A rotr B =  64
        @( description, "and right rotate. All shifts and rotates should be done on" )
        @( description, "the first integer with a shift/rotate amount of the second" )
        @( description, "integer." )
-       @( see_also, "http://rosettacode.org/wiki/Bitwise_operations" )
-       @( author, "Ken O. Burtch" );
+       @( category, "tutorials" )
+       @( author, "Ken O. Burtch" )
+       @( see_also, "http://rosettacode.org/wiki/Bitwise_operations" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( shell_script );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> bitarith <b>is</b>
