@@ -4,15 +4,17 @@
 <PRE>
 #!/usr/local/bin/spar
 
-<b>pragma</b> annotate( summary, "file_creation" );
-<b>pragma</b> annotate( description, "In this task, the job is to create a new empty file called 'output.txt' of" );
-<b>pragma</b> annotate( description, "size 0 bytes and an empty directory called 'docs'. This should be done" );
-<b>pragma</b> annotate( description, "twice: once 'here', i.e. in the current working directory and once in the" );
-<b>pragma</b> annotate( description, "filesystem root. " );
-<b>pragma</b> annotate( see_also, "http://rosettacode.org/wiki/File_Creation" );
-<b>pragma</b> annotate( author, "Ken O. Burtch" );
+<b>pragma</b> annotate( summary, "file_creation" )
+              @( description, "In this task, the job is to create a new empty file called 'output.txt' of" )
+              @( description, "size 0 bytes and an empty directory called 'docs'. This should be done" )
+              @( description, "twice: once 'here', i.e. in the current working directory and once in the" )
+              @( description, "filesystem root." )
+              @( category, "tutorials" )
+              @( author, "Ken O. Burtch" )
+              @( see_also, "http://rosettacode.org/wiki/File_Creation" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> file_creation <b>is</b>
@@ -29,4 +31,5 @@
 
 <FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
 <FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
+
 </PRE></BODY></HTML>
