@@ -7,8 +7,11 @@
 <b>pragma</b> annotate( summary, "filecopy" )
        @( description, "The job is to create a file called 'output.txt', and place in it" )
        @( description, "the contents of the file 'input.txt'." )
-       @( see_also, "http://rosettacode.org/wiki/File_IO" )
-       @( author, "Ken O. Burtch" );
+       @( category, "tutorials" )
+       @( author, "Ken O. Burtch" )
+       @( see_also, "http://rosettacode.org/wiki/File_IO" );
+
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> license( unrestricted );
 
 <b>procedure</b> filecopy <b>is</b>
@@ -44,5 +47,6 @@
 
 <FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
 <FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
+
 
 </PRE></BODY></HTML>
