@@ -19,12 +19,14 @@ $ spar incstr
 <PRE>
 #!/usr/local/bin/spar
 
-<b>pragma</b> annotate( summary, "incstr" );
-<b>pragma</b> annotate( description, "Increment an integer number in a string" );
-<b>pragma</b> annotate( see_also, "http://rosettacode.org/wiki/Increment_a_numerical_string" );
-<b>pragma</b> annotate( author, "Ken O. Burtch" );
+<b>pragma</b> annotate( summary, "incstr" )
+              @( description, "Increment an integer number in a string" )
+              @( category, "tutorials" )
+              @( author, "Ken O. Burtch" )
+              @( see_also, "http://rosettacode.org/wiki/Increment_a_numerical_string" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> incstr <b>is</b>
