@@ -27,14 +27,16 @@ $ spar int_sort
 <PRE>
 #!/usr/local/bin/spar
 
-<b>pragma</b> annotate( summary, "int_sort" );
-<b>pragma</b> annotate( description, "Sort an array (or list) of integers in ascending" );
-<b>pragma</b> annotate( description, "numerical order. Use a sorting facility provided by" );
-<b>pragma</b> annotate( description, "the language/library if possible." );
-<b>pragma</b> annotate( see_also, "http://rosettacode.org/wiki/Sort_an_integer_array" );
-<b>pragma</b> annotate( author, "Ken O. Burtch" );
+<b>pragma</b> annotate( summary, "int_sort" )
+              @( description, "Sort an array (or list) of integers in ascending" )
+              @( description, "numerical order. Use a sorting facility provided by" )
+              @( description, "the language/library if possible." )
+              @( category, "tutorials" )
+              @( author, "Ken O. Burtch" )
+              @( see_also, "http://rosettacode.org/wiki/Sort_an_integer_array" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> int_sort <b>is</b>
