@@ -25,17 +25,19 @@ $ spar loopsbreak
 <PRE>
 #!/usr/local/bin/spar
 
-<b>pragma</b> annotate( summary, "loopsbreak" );
-<b>pragma</b> annotate( description, "Show a loop which prints random numbers (each number newly" );
-<b>pragma</b> annotate( description, "generated each loop) from 0 to 19 (inclusive). If a number is" );
-<b>pragma</b> annotate( description, "10, stop the loop after printing it, and do not generate any" );
-<b>pragma</b> annotate( description, "further numbers. Otherwise, generate and print a second random" );
-<b>pragma</b> annotate( description, "number before restarting the loop. If the number 10 is never" );
-<b>pragma</b> annotate( description, "generated as the first number in a loop, loop forever. " );
-<b>pragma</b> annotate( see_also, "http://rosettacode.org/wiki/Loops/Break" );
-<b>pragma</b> annotate( author, "Ken O. Burtch" );
+<b>pragma</b> annotate( summary, "loopsbreak" )
+              @( description, "Show a loop which prints random numbers (each number newly" )
+              @( description, "generated each loop) from 0 to 19 (inclusive). If a number is" )
+              @( description, "10, stop the loop after printing it, and do not generate any" )
+              @( description, "further numbers. Otherwise, generate and print a second random" )
+              @( description, "number before restarting the loop. If the number 10 is never" )
+              @( description, "generated as the first number in a loop, loop forever. " )
+              @( category, "tutorials" )
+              @( author, "Ken O. Burtch" )
+              @( see_also, "http://rosettacode.org/wiki/Loops/Break" );
 <b>pragma</b> license( unrestricted );
 
+<b>pragma</b> software_model( nonstandard );
 <b>pragma</b> restriction( no_external_commands );
 
 <b>procedure</b> arraysloop <b>is</b>
