@@ -1,16 +1,18 @@
 #!/usr/local/bin/spar
 
-pragma annotate( summary, "loopsbreak" );
-pragma annotate( description, "Show a loop which prints random numbers (each number newly" );
-pragma annotate( description, "generated each loop) from 0 to 19 (inclusive). If a number is" );
-pragma annotate( description, "10, stop the loop after printing it, and do not generate any" );
-pragma annotate( description, "further numbers. Otherwise, generate and print a second random" );
-pragma annotate( description, "number before restarting the loop. If the number 10 is never" );
-pragma annotate( description, "generated as the first number in a loop, loop forever. " );
-pragma annotate( see_also, "http://rosettacode.org/wiki/Loops/Break" );
-pragma annotate( author, "Ken O. Burtch" );
+pragma annotate( summary, "loopsbreak" )
+              @( description, "Show a loop which prints random numbers (each number newly" )
+              @( description, "generated each loop) from 0 to 19 (inclusive). If a number is" )
+              @( description, "10, stop the loop after printing it, and do not generate any" )
+              @( description, "further numbers. Otherwise, generate and print a second random" )
+              @( description, "number before restarting the loop. If the number 10 is never" )
+              @( description, "generated as the first number in a loop, loop forever. " )
+              @( category, "tutorials" )
+              @( author, "Ken O. Burtch" )
+              @( see_also, "http://rosettacode.org/wiki/Loops/Break" );
 pragma license( unrestricted );
 
+pragma software_model( nonstandard );
 pragma restriction( no_external_commands );
 
 procedure arraysloop is
